# boltz2-playtime

./: .gitignore  README.md  pyproject.toml
data/: inputs_generate.yaml  uniprotkb_cc_disease_Multiple_sclerosis_2025_06_08.json
data/affinities_config_files/: Aspirin_vs_InsulinReceptor_Insulin_receptor.yaml  Aspirin_vs_PI3K_Phosphatidylinositol_4,5-bisphosphate_3-kinase_catalytic_subunit_alpha_isoform.yaml  Atorvastatin_3-hydroxy-3-methylglutaryl-coenzyme_A_reductase.yaml  Baricitinib_vs_JAK1_Tyrosine-protein_kinase_JAK1.yaml  Caffeine_vs_DNA_Polymerase_Beta-lactamase_SHV-2.yaml  Cetuximab_Epidermal_growth_factor_receptor.yaml  Ciprofloxacin_Fatty_acid_metabolism_regulator_protein.yaml  Dapagliflozin_vs_SGLT2_Sodium_glucose_cotransporter_2.yaml  Digoxin_vs_Cyclooxygenase1_Prostaglandin_G_H_synthase_1.yaml  Donepezil_Acetylcholinesterase.yaml  Gliclazide_Adenylate_kinase_isoenzyme_5.yaml  Hydroxychloroquine_vs_ACE2_Angiotensin-converting_enzyme_2.yaml  Ibuprofen_vs_Thrombin_Prothrombin.yaml  Imatinib_Tyrosine-protein_kinase_ABL1.yaml  Ivermectin_vs_SARS_CoV2_Importin_Importin_subunit_beta-1.yaml  Lisinopril_Angiotensin-converting_enzyme.yaml  Lisinopril_vs_Beta2AdrenergicReceptor_Beta-2_adrenergic_receptor.yaml  Metformin_vs_AMPK_5'-AMP-activated_protein_kinase_catalytic_subunit_alpha-1.yaml  Metformin_vs_EGFR_Epidermal_growth_factor_receptor.yaml  Methotrexate_Dihydrofolate_reductase.yaml  Minoxidil_vs_KATP_Channel_Replication_protein_E1.yaml  Paracetamol_vs_HIV_Protease_<MANUAL_PROTEIN_NAME_FOR_Q72874>.yaml  Raloxifene_vs_SARS_CoV2_Mpro_Replicase_polyprotein_1ab.yaml  (+17 more)
(+4 files in other folders)
